--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<div class="slideshow__slide-caption">
 			<div class="slideshow__slide-caption-text">
 				<div class="container js-parallax" data-speed="2" data-position="top" data-target="#js-header">
-					<h1 class="slideshow__slide-caption-title">Demande de remplacement, de réparation ou de nouveau matériel</h1>
+					<h1 class="slideshow__slide-caption-title">Gérez tous vos actifs informatiques 100 % à distance</h1>
 					<a class="slideshow__slide-caption-subtitle -load o-hsub -link" href="signin.php">
 						<span class="slideshow__slide-caption-subtitle-label">Connectez vous à la plateforme</span>
 					</a>
@@ -82,7 +82,7 @@
 		<div class="slideshow__slide-caption">
 			<div class="slideshow__slide-caption-text">
 				<div class="container js-parallax" data-speed="2" data-position="top" data-target="#js-header">
-					<h1 class="slideshow__slide-caption-title">Sans déplacement et sans papier.</h1>
+					<h1 class="slideshow__slide-caption-title">IPA desk vous donne un contrôle total sur vos actifs informatiques.</h1>
 					<a class="slideshow__slide-caption-subtitle -load o-hsub -link" href="signin.php">
 						<span class="slideshow__slide-caption-subtitle-label">amusez vous</span>
 					</a>
